[REFACTOR] code smell and test